--- a/sga-frontend/src/app/app.component.html
+++ b/sga-frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+<!--<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>-->
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
 
