Implementar componente de alocacao

--- a/sga-frontend/src/app/pages/local/local/local-form/local-form.component.html
+++ b/sga-frontend/src/app/pages/local/local/local-form/local-form.component.html
@@ -27,9 +27,9 @@
             </div>
             <div class="field col-12">
                 <label class="campo-form block">Quantidade</label>
-                <p-inputNumber inputId="integeronly" formControlName="quantidade" [showButtons]="true"></p-inputNumber>
+                <p-inputNumber inputId="integeronly" formControlName="quantidade" class="flex" styleClass="w-full" [showButtons]="true"></p-inputNumber>
             </div>
-            <div class="field col-12 ">
+            <div class="field col-12">
                 <p-button [disabled]="isVisualizar" label="Adicionar" styleClass="button-save-new" (onClick)="adicionarEquipamento()"></p-button>
             </div>
 
