--- a/sga-frontend/src/styles.scss
+++ b/sga-frontend/src/styles.scss
@@ -17,3 +17,19 @@ $gutter: 1rem; //for primeflex grid system
     background-color: #3B82F6 !important;
     border: none !important;
 }
+
+th.p-columnFilter {
+    text-align: center !important;
+}
+
+td {
+    text-align: center !important;
+}
+
+.p-columnFilter {
+    text-align: center !important;
+}
+
+.centralizado {
+    text-align: center !important;
+}
