--- a/sga-frontend/src/app/pages/local/equipamento/equipamento.component.html
+++ b/sga-frontend/src/app/pages/local/equipamento/equipamento.component.html
@@ -13,7 +13,7 @@
     <p-table [columns]="cols" [value]="equipamentos" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header" let-columns>
             <tr>
-                <th *ngFor="let col of columns">
+                <th *ngFor="let col of columns" class="centralizado">
                     {{ col.header }}
                 </th>
             </tr>
