--- a/sga-frontend/src/app/pages/local/local/local-form/local-form.component.html
+++ b/sga-frontend/src/app/pages/local/local/local-form/local-form.component.html
@@ -37,7 +37,7 @@
         <p-table [columns]="colsEquipamento" [value]="equipamentosList" [tableStyle]="{ 'min-width': '50rem' }">
             <ng-template pTemplate="header" let-columns>
                 <tr>
-                    <th *ngFor="let col of columns">
+                    <th *ngFor="let col of columns" class="centralizado">
                         {{ col.header }}
                     </th>
                 </tr>
