--- a/sga-frontend/src/styles.scss
+++ b/sga-frontend/src/styles.scss
@@ -14,7 +14,7 @@ $gutter: 1rem; //for primeflex grid system
 @import "assets/demo/styles/code.scss";
 
 .button-save-new{
-    background-color: #3B82F6 !important;
+    background-color: #476f29 !important;
     border: none !important;
 }
 
