--- a/sga-frontend/src/assets/layout/styles/theme/lara-light-indigo/theme.css
+++ b/sga-frontend/src/assets/layout/styles/theme/lara-light-indigo/theme.css
@@ -7,7 +7,7 @@
   --surface-f:#ffffff;
   --text-color:#495057;
   --text-color-secondary:#6c757d;
-  --primary-color:#6366F1;
+  --primary-color:#195128;
   --primary-color-text:#ffffff;
   --font-family:-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   --surface-0: #ffffff;
@@ -1886,36 +1886,36 @@ p-treeselect.p-treeselect-clearable .p-treeselect-clear-icon {
 
 .p-button {
   color: #ffffff;
-  background: #6366F1;
-  border: 1px solid #6366F1;
+  background: #72aa2e;
+  border: 1px solid #72aa2e;
   padding: 0.75rem 1.25rem;
   font-size: 1rem;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
   border-radius: 6px;
 }
 .p-button:enabled:hover {
-  background: #4F46E5;
+  background: #358639;
   color: #ffffff;
-  border-color: #4F46E5;
+  border-color: #358639;
 }
 .p-button:enabled:active {
-  background: #4338CA;
+  background: #358639;
   color: #ffffff;
-  border-color: #4338CA;
+  border-color: #358639;
 }
 .p-button.p-button-outlined {
   background-color: transparent;
-  color: #6366F1;
+  color: #358639;
   border: 1px solid;
 }
 .p-button.p-button-outlined:enabled:hover {
   background: rgba(99, 102, 241, 0.04);
-  color: #6366F1;
+  color: #358639;
   border: 1px solid;
 }
 .p-button.p-button-outlined:enabled:active {
   background: rgba(99, 102, 241, 0.16);
-  color: #6366F1;
+  color: #358639;
   border: 1px solid;
 }
 .p-button.p-button-outlined.p-button-plain {
@@ -1932,17 +1932,17 @@ p-treeselect.p-treeselect-clearable .p-treeselect-clear-icon {
 }
 .p-button.p-button-text {
   background-color: transparent;
-  color: #6366F1;
+  color: #358639;
   border-color: transparent;
 }
 .p-button.p-button-text:enabled:hover {
   background: rgba(99, 102, 241, 0.04);
-  color: #6366F1;
+  color: #358639;
   border-color: transparent;
 }
 .p-button.p-button-text:enabled:active {
   background: rgba(99, 102, 241, 0.16);
-  color: #6366F1;
+  color: #358639;
   border-color: transparent;
 }
 .p-button.p-button-text.p-button-plain {
