--- a/sga-frontend/src/app/pages/local/evento/evento-form/evento-form.component.html
+++ b/sga-frontend/src/app/pages/local/evento/evento-form/evento-form.component.html
@@ -13,15 +13,15 @@
             </div>
             <div class="field col-12">
                 <label for="data" class="block">Data</label>
-                <p-calendar appendTo="body" id="data" formControlName="data" ></p-calendar>
+                <p-calendar appendTo="body" id="data" formControlName="data" class="flex" styleClass="w-full"></p-calendar>
             </div>
             <div class="field col-12">
                 <label for="horaInicio" class="block">Hora Início</label>
-                <p-inputMask id="horaInicio" mask="99:99" formControlName="horaInicio"></p-inputMask>
+                <p-inputMask id="horaInicio" mask="99:99" formControlName="horaInicio" class="flex" styleClass="w-full"></p-inputMask>
             </div>
             <div class="field col-12">
                 <label for="horaFim" class="block">Hora Fim</label>
-                <p-inputMask id="horaFim" mask="99:99" formControlName="horaFim"></p-inputMask>
+                <p-inputMask id="horaFim" mask="99:99" formControlName="horaFim" class="flex" styleClass="w-full"></p-inputMask>
             </div>
 
             <div class="col-12 flex justify-content-end mt-3">
@@ -30,11 +30,8 @@
                 <p-button label="Salvar" styleClass="button-save-new"
                           (onClick)="salvarEvento()"></p-button>
             </div>
-
-            <div class="row">
-                <input type="text" (window:keypress)="onKey($event)"  autofocus />
-                <p>barcode: {{ barcode }}</p>
-            </div>
         </div>
     </form>
 </div>
+<p-toast></p-toast>
+<p-confirmDialog></p-confirmDialog>
