Modificando configurações de autenticação. Atribuindo o usuario Logado na auditoria de evento e armazenando o token

--- a/sga-frontend/src/app/pages/local/professor/professor.component.html
+++ b/sga-frontend/src/app/pages/local/professor/professor.component.html
@@ -43,7 +43,7 @@
                                 pButton
                                 icon="pi pi-trash"
                                 class="button-action botao-secundario button-view sem-fundo flex align-items-center justify-content-center m-1"
-                                (click)="excluirProfessor(rowData.id)">
+                                (click)="excluirProfessor(rowData.matricula)">
                             </button>
                         </div>
                     </ng-template>
