--- a/sga-frontend/src/app/pages/coordenador/coordenador-form/coordenador-form.component.html
+++ b/sga-frontend/src/app/pages/coordenador/coordenador-form/coordenador-form.component.html
@@ -1,9 +1,23 @@
 <div class="card">
     <form [formGroup]="form">
         <div class="formgrid grid">
+
+            <div class="col-12 flex">
+                <div class="field col-8">
+                    <label for="matricula" class="block">Matricula*</label>
+                    <input id="matricula" type="text" pInputText class="w-full" formControlName="matricula"/>
+                </div>
+
+                <div class="field col-2">
+                    <p-button label="Pesquisar" icon="pi pi-search" iconPos="right" styleClass="button-save-new mr-2 mt-4"
+                    (onClick)="buscarCoordenadorPorMatricula()" ></p-button>
+                </div>
+
+            </div>
+
             <div class="field col-12">
                 <label for="nome" class="block">Nome*</label>
-                <input id="nome" type="text" pInputText class="w-full" formControlName="nome"/>
+                <input readonly id="nome" type="text" pInputText class="w-full" formControlName="nome"/>
             </div>
             <div class="col-12 flex justify-content-end">
                 <p-button label="Cancelar" styleClass="p-button-secondary mr-3"
