--- a/sga-frontend/src/app/pages/local/professor/professor-form/professor-form.component.html
+++ b/sga-frontend/src/app/pages/local/professor/professor-form/professor-form.component.html
@@ -1,15 +1,35 @@
 <div class="card">
     <form [formGroup]="form">
         <div class="formgrid grid">
+
+            <div class="col-12 flex">
+                <div class="field col-8">
+                    <label for="matricula" class="block">Matricula*</label>
+                    <input [readonly]="!motrarBotaoPesquisar" id="matricula" type="text" pInputText class="w-full" formControlName="matricula"/>
+                </div>
+
+                <div class="field col-2" *ngIf="this.motrarBotaoPesquisar">
+                    <p-button label="Pesquisar" icon="pi pi-search" iconPos="right" styleClass="button-save-new mr-2 mt-4"
+                               (onClick)="buscarProfessorPorMatricula()"></p-button>
+                </div>
+
+            </div>
+
+
             <div class="field col-12">
                 <label for="nome" class="block">Nome</label>
-                <input id="nome" type="text" pInputText class="w-full" formControlName="nome"/>
+                <input readonly id="nome" type="text" pInputText class="w-full" formControlName="nome"/>
             </div>
             <div class="field col-12">
                 <label class="block">Coordenadoria</label>
                 <p-dropdown formControlName="idCoordenadoria" [options]="coordenadorias" placeholder="Selecione a coordenadoria"
                             appendTo="body" styleClass="w-full">
                 </p-dropdown>
+            </div>
+
+            <div class="field col-12">
+                <label for="rfid" class="block">RFID Vinculado</label>
+                <input id="rfid" type="text" pInputText class="w-full" formControlName="rfid"/>
             </div>
 
             <div class="col-12 flex justify-content-end mt-3">
