--- a/sga-frontend/src/app/pages/local/horarios-aluno/horarios-aluno.component.html
+++ b/sga-frontend/src/app/pages/local/horarios-aluno/horarios-aluno.component.html
@@ -12,9 +12,12 @@
                 <input type="text" pInputText id="matriculaAluno" formControlName="matricula"/>
             </div>
 
-            <div class="field col-3">
+            <div class="field col-4">
                 <p-button label="Pesquisar" icon="pi pi-search" iconPos="right" styleClass="button-save-new mr-2 mt-4"
                           (onClick)="buscarHorarios(TipoAtorBuscaEnum.ALUNO)"></p-button>
+                <p-button label="Gerar Relatório" styleClass="button-save-new mr-2 mt-4 ml-2"
+                          (onClick)="gerarRelatorioAulas()"></p-button>
+
             </div>
         </div>
         <app-grid-horario *ngIf="tipoAtorGrid == TipoAtorBuscaEnum.ALUNO" [horarios]="horarios1"> </app-grid-horario>
@@ -31,9 +34,11 @@
                             appendTo="body" styleClass="w-full">
                 </p-dropdown>
             </div>
-            <div class="field col-3">
+            <div class="field col-4">
                 <p-button label="Pesquisar" icon="pi pi-search" iconPos="right" styleClass="button-save-new mr-2 mt-4"
                           (onClick)="buscarHorarios(TipoAtorBuscaEnum.PROFESSOR)"></p-button>
+                <p-button label="Gerar Relatório" styleClass="button-save-new mr-2 mt-4 ml-2"
+                          (onClick)="gerarRelatorioAulas()"></p-button>
             </div>
         </div>
         <app-grid-horario *ngIf="tipoAtorGrid == TipoAtorBuscaEnum.PROFESSOR" [horarios]="horarios1"> </app-grid-horario>
@@ -46,11 +51,16 @@
                             appendTo="body" styleClass="w-full">
                 </p-dropdown>
             </div>
-            <div class="field col-3">
+            <div class="field col-4">
                 <p-button label="Pesquisar" icon="pi pi-search" iconPos="right" styleClass="button-save-new mr-2 mt-4"
                           (onClick)="buscarHorarios(TipoAtorBuscaEnum.TURMA)"></p-button>
+                <p-button label="Gerar Relatório" styleClass="button-save-new mr-2 mt-4 ml-2"
+                          (onClick)="gerarRelatorioAulas()"></p-button>
             </div>
         </div>
         <app-grid-horario *ngIf="tipoAtorGrid == TipoAtorBuscaEnum.TURMA" [horarios]="horarios1"> </app-grid-horario>
     </p-tabPanel>
 </p-tabView>
+
+
+<app-impressao-relatorio-horarios *ngIf="horarioRelatorio" [horarios1]="horarios1"></app-impressao-relatorio-horarios>
