Refatoração de módulos

--- a/sga-frontend/src/app/app.component.html
+++ b/sga-frontend/src/app/app.component.html
@@ -2,3 +2,4 @@
 <!--<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>-->
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
+<app-layout></app-layout>
