--- a/sga-frontend/src/app/pages/aluno/aluno/aluno-form/aluno-form.component.html
+++ b/sga-frontend/src/app/pages/aluno/aluno/aluno-form/aluno-form.component.html
@@ -2,32 +2,22 @@
     <form [formGroup]="form">
         <div class="formgrid grid">
 
-            <div class="col-12 flex">
-                <div class="field col-8">
-                    <label for="matricula" class="block">Matricula*</label>
-                    <input [readonly]="!motrarBotaoPesquisar" id="matricula" type="text" pInputText class="w-full" formControlName="matricula"/>
-                </div>
 
-                <div class="field col-2" *ngIf="motrarBotaoPesquisar">
-                    <p-button label="Pesquisar" icon="pi pi-search" iconPos="right" styleClass="button-save-new mr-2 mt-4"
-                              (onClick)="buscarAlunoPorMatricula()" ></p-button>
-                </div>
-
+            <div class="field col-8">
+                <label for="matricula" class="block">Matricula*</label>
+                <input [readonly]="!motrarBotaoPesquisar" id="matricula" type="text" pInputText class="w-full"
+                       formControlName="matricula"/>
             </div>
 
+            <div class="field col-4" *ngIf="motrarBotaoPesquisar">
+                <p-button label="Pesquisar" icon="pi pi-search" iconPos="right" styleClass="button-save-new mr-2 mt-4"
+                          (onClick)="buscarAlunoPorMatricula()"></p-button>
+            </div>
 
-<!--            <div class="field col-12">-->
-<!--                <label for="matricula" class="block">Matricula*</label>-->
-<!--                <input id="matricula" type="text" pInputText class="w-full" formControlName="matricula"/>-->
-<!--            </div>-->
             <div class="field col-12">
                 <label for="nome" class="block">Nome*</label>
                 <input id="nome" type="text" pInputText class="w-full" formControlName="nome"/>
             </div>
-<!--            <div class="field col-12">-->
-<!--                <label for="codigoBarra" class="block">Código de Barras*</label>-->
-<!--                <input id="codigoBarra" type="text" pInputText class="w-full" formControlName="codigoBarra"/>-->
-<!--            </div>-->
             <div class="col-12 flex justify-content-end">
                 <p-button label="Cancelar" styleClass="p-button-secondary mr-3" [disabled]="isVisualizar"
                           (onClick)="fecharDialog()"></p-button>
