Aplicar pipe em datas

--- a/sga-frontend/src/app/pages/periodo/periodo/periodo-form/periodo-form.component.html
+++ b/sga-frontend/src/app/pages/periodo/periodo/periodo-form/periodo-form.component.html
@@ -15,6 +15,7 @@
                         formControlName="dataInicio"
                         dateFormat="dd/mm/yy"
                         appendTo="body"
+                        styleClass="w-full"
                         [showIcon]="true"
                     ></p-calendar>
                 </span>
@@ -29,6 +30,7 @@
                         formControlName="dataFim"
                         dateFormat="dd/mm/yy"
                         appendTo="body"
+                        styleClass="w-full"
                         [showIcon]="true"
                     ></p-calendar>
                 </span>
