--- a/sga-frontend/src/app/pages/periodo/periodo/periodo.component.html
+++ b/sga-frontend/src/app/pages/periodo/periodo/periodo.component.html
@@ -24,6 +24,12 @@
                     <ng-template [ngIf]="col.text">
                         {{rowData[col.field]}}
                     </ng-template>
+                    <ng-template [ngIf]="col.field == 'dataInicio'">
+                        {{rowData[col.field] | formatarData}}
+                    </ng-template>
+                    <ng-template [ngIf]="col.field == 'dataFim'">
+                        {{rowData[col.field] | formatarData}}
+                    </ng-template>
                     <ng-template [ngIf]="col.field == 'acoes'">
                         <div class="flex justify-content-center p-0">
                             <button
