--- a/sga-frontend/src/app/layout/app.topbar.component.html
+++ b/sga-frontend/src/app/layout/app.topbar.component.html
@@ -17,8 +17,12 @@
             <i class="pi pi-calendar"></i>
             <span>Calendar</span>
         </button>
-        <button class="p-link layout-topbar-button">
+        <button class="p-link layout-topbar-button" (click)="redirecionarTelaLogin()">
             <i class="pi pi-user"></i>
+            <span>Profile</span>
+        </button>
+        <button class="p-link layout-topbar-button" (click)="logout()">
+            <i class="pi pi-power-off"></i>
             <span>Profile</span>
         </button>
         <button class="p-link layout-topbar-button" [routerLink]="'/documentation'">
