--- a/sga-frontend/src/app/pages/disciplina/disciplina/disciplina.component.html
+++ b/sga-frontend/src/app/pages/disciplina/disciplina/disciplina.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="card">
-    <p-table [columns]="cols" [value]="disciplinas" [tableStyle]="{ 'min-width': '50rem' }">
+    <p-table sortcurrentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [paginator]="true" rows="5" [rowsPerPageOptions]="[5, 10, 15]" [columns]="cols" [value]="disciplinas" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header" let-columns>
             <tr>
                 <th *ngFor="let col of columns" class="centralizado">
